fix(ci): add missing `runs-on`

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,6 +81,9 @@ jobs:
           path: ./results.json
 
   comment_results:
+    runs-on: [self-hosted, intel-cpu, 8-cpu, ci]
+    container:
+      image: ubuntu:22.04
     steps:
       - name: Install dependencies
         run: |
